[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/screens/title_screen.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/main_theme_voices.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/yay_sound.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/spritesheets/toddler_01.png" type="Texture" id=5]
[ext_resource path="res://assets/spritesheets/teacher_01.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "running_left",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 20, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 40, 80, 20, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 60, 80, 20, 20 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "running_left",
"speed": 5.0
} ]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="YaaySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="TeacherChasingToddler" type="KinematicBody2D" parent="."]
position = Vector2( 1100, 129 )

[node name="Teacher" type="AnimatedSprite" parent="TeacherChasingToddler"]
position = Vector2( 58, 0 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
animation = "running_left"
frame = 2
playing = true

[node name="Toddler" type="AnimatedSprite" parent="TeacherChasingToddler"]
position = Vector2( -57, 10 )
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
animation = "running_left"
frame = 1
playing = true

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="finished" from="YaaySound" to="." method="_on_YaaySound_finished"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_ChaseTimer_timeout"]
